syntax = "proto3";

package Common.Proto.Fight;
import "Fight/Cast.proto";

message SpellRequest {
    CastInfo cast_info = 1;
}

message SpellFailResponse {
    int32 caster_id = 1;
    int32 skill_id = 2;
    CastResult reason = 3;
}

message SpellResponse {
    repeated CastInfo cast_info_arr = 1;
}